fixes: on resize after filter changed img was overflowing

--- a/main.css
+++ b/main.css
@@ -29,8 +29,7 @@ body {
 }
 
 .container {
-  height: fit-content;
-  width: 70%;
+  width: clamp(60%, 700px, 100%);
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -41,16 +40,8 @@ body {
   text-transform: capitalize;
 }
 
-@media (max-width: 567px) {
-  .container {
-    width: 100%;
-    margin: 0;
-  }
-}
-
 .options-and-view {
   display: flex;
-  flex-wrap: wrap;
   gap: 1rem;
 }
 
@@ -159,7 +150,7 @@ body {
 
 .options-and-view .view {
   border: 1px solid var(--gray);
-  flex: 1;
+  flex: 1 1;
 }
 
 .reset-and-file {
